--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title></title>
 </head>
 <body>
+
+<h1>Test</h1>
 <script id="__bs_script__">//<![CDATA[
     document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.18.7'><\/script>".replace("HOST", location.hostname));
 //]]></script>
